--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,10 @@
+2010-06-03  Bruno Haible  <bruno@clisp.org>
+
+	Choose among AC_DEFUN_ONCE, AC_DEFUN in a way that aclocal understands.
+	* iconv.m4 (gl_iconv_AC_DEFUN): New macro.
+	(AM_ICONV): Define it through gl_iconv_AC_DEFUN.
+	Reported by Ludovic Courtès <ludo@gnu.org>.
+
 2010-05-16  Bruno Haible  <bruno@clisp.org>
 
 	Avoid autoconf warnings about AM_ICONV.
