--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-06-03  Bruno Haible  <bruno@clisp.org>
+
+	Deprecate the --with-cvs option.
+	* DEPENDENCIES: Update entries for git, CVS. Remove entry for RCS.
+	* PACKAGING: Update comments about archive.*.tar.gz.
+
 2010-05-19  Bruno Haible  <bruno@clisp.org>
 
 	Link with libunistring, if it exists.
