--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,9 @@
+2010-06-03  Bruno Haible  <bruno@clisp.org>
+
+	Deprecate the --with-cvs option.
+	* configure.ac: Document options --without-git, --with-cvs.
+	(ARCHIVE_FORMAT): Use cvs only when explicitly asked for.
+
 2010-05-24  Bruno Haible  <bruno@clisp.org>
 
 	Use the newest regex module from gnulib.
