--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-03  Bruno Haible  <bruno@clisp.org>
+
+	* libgnuintl.h.in (LIBINTL_VERSION): Bump to 0.18.1.
+	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 9:1:1.
+
 2010-05-20  Bruno Haible  <bruno@clisp.org>
 
 	* gettextP.h (_nl_locale_name): Comment out declaration.
