--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-04  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.18.1 released.
+
 2010-06-03  Bruno Haible  <bruno@clisp.org>
 
 	* README: Remove lots of old cruft. Mention the translators as the
