--- a/gettext-runtime/doc/ChangeLog
+++ b/gettext-runtime/doc/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-04  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.18.1 released.
+
 2010-06-03  Bruno Haible  <bruno@clisp.org>
 
 	De-emphasize the intl/ subdirectory.
