--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-04  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.18.1 released.
+
 2010-06-03  Bruno Haible  <bruno@clisp.org>
 
 	Choose among AC_DEFUN_ONCE, AC_DEFUN in a way that aclocal understands.
