--- a/gettext-tools/gnulib-tests/ChangeLog
+++ b/gettext-tools/gnulib-tests/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-04  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.18.1 released.
+
 2010-05-24  Bruno Haible  <bruno@clisp.org>
 
 	Fix compilation failure on systems without <libintl.h>.
