--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-04  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.18.1 released.
+
 2010-06-03  Bruno Haible  <bruno@clisp.org>
 
 	xgettext: Recognize language of files ending in .perl.
