--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-04  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.18.1 released.
+
 2010-05-26  Bruno Haible  <bruno@clisp.org>
 
 	Avoid test suite failures on NetBSD 5.0.
