--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,5 +1,10 @@
 2010-06-04  Bruno Haible  <bruno@clisp.org>
 
+	Prefer documented low-level autoconf macro names.
+	* intl.m4 (gt_CHECK_DECL): Use m4_translit instead of translit.
+
+2010-06-04  Bruno Haible  <bruno@clisp.org>
+
 	* gettext-0.18.1 released.
 
 2010-06-03  Bruno Haible  <bruno@clisp.org>
