--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,9 @@
+2010-06-06  Bruno Haible  <bruno@clisp.org>
+
+	Avoid link error in programs that use libgettextpo.
+	* Makefile.am (libgettextpo_la_LIBADD): Add $(LTLIBUNISTRING).
+	Reported by Dmitry V. Levin <ldv@altlinux.org>.
+
 2010-06-04  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.18.1 released.
