--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,9 @@
+2010-06-06  Bruno Haible  <bruno@clisp.org>
+
+	xgettext: Recognize language of files ending in .perl.
+	* gettext.texi (Perl): Mention file extension '.perl'.
+	Suggested by Ævar Arnfjörð Bjarmason <avarab@gmail.com>.
+
 2010-06-04  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.18.1 released.
