--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,26 @@
 2010-06-06  Bruno Haible  <bruno@clisp.org>
 
+	New options --with-xz and --with-bzip2 for compressing the archive.
+	* autopoint.in: Handle the archive formats dirgz, dirbz2, dirxz instead
+	of dir.
+	* convert-archive.in: Handle the archive formats dirgz, dirbz2, dirxz
+	like dir. Format 'dir' is now without compression.
+	* Makefile.am (MOSTLYCLEANFILES): New variable.
+	(CLEANFILES): Add archive.dir.tar.gz, archive.dir.tar.bz2,
+	archive.dir.tar.xz.
+	(EXTRA_DIST): Add archive.dir.tar. Remove archive.dir.tar.gz.
+	(ARCHIVE_dirgz, ARCHIVE_dirbz2, ARCHIVE_dirxz, ARCHIVE_git,
+	ARCHIVE_cvs): New variables.
+	(gettextsrc_DATA): Use them.
+	(archive.dir.tar): Renamed from archive.dir.tar.gz. Look for an
+	installed .tar.bzip2 or .tar.xz as well.
+	(archive.dir.tar.gz, archive.dir.tar.bz2, archive.dir.tar.xz): New
+	rules.
+	(archive.git.tar.gz, archive.cvs.tar.gz): Update.
+	* add-to-archive: Read and write an uncompressed archive.dir.tar.
+
+2010-06-06  Bruno Haible  <bruno@clisp.org>
+
 	Make 'convert-archive' less verbose.
 	* convert-archive.in: Avoid all output from "git commit".
 
