--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,10 @@
+2010-06-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Avoid double-quotes inside backquote inside double-quote.
+	* gettext-runtime/m4/po.m4 (AM_PO_SUBDIRS, AM_POSTPROCESS_PO_MAKEFILE):
+	Remove unneeded outermost double-quotes around backquote that contains
+	double-quoted strings. Avoids an idiom that nearly triggers a ksh bug.
+
 2010-06-04  Bruno Haible  <bruno@clisp.org>
 
 	Prefer documented low-level autoconf macro names.
