--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-02  Bruno Haible  <bruno@clisp.org>
+
+	* zh_CN.po: Update from Ji ZhengYu <zhengyuji@gmail.com>.
+
 2010-06-12  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.in.in ($(DOMAIN).pot-update): When GNU find is available,
