--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-11  Bruno Haible  <bruno@clisp.org>
+
+	* zh_CN.po: Update from Aron Xu <happyaron.xu@gmail.com>.
+
 2010-07-02  Bruno Haible  <bruno@clisp.org>
 
 	* nl.po: Update from Benno Schulenberg <benno@vertaalt.nl>.
