--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-27  Bruno Haible  <bruno@clisp.org>
+
+	* fr.po: Update from Christophe Combelles <ccomb@free.fr>.
+
 2010-07-11  Bruno Haible  <bruno@clisp.org>
 
 	* zh_CN.po: Update from Aron Xu <happyaron.xu@gmail.com>.
