--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,9 @@
+2010-07-30  Bruno Haible  <bruno@clisp.org>
+
+	iconv: Update regarding AIX.
+	* iconv.m4 (AM_ICONV_LINK): When cross-compiling, guess yes on AIX 7.
+	Reported by Rainer Tammer.
+
 2010-07-19  Bruno Haible  <bruno@clisp.org>
 
 	Modernize AC_TRY_RUN invocations.
