--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-15  Bruno Haible  <bruno@clisp.org>
+
+	* fi.po: Update from Jorma Karvonen <karvonen.jorma@gmail.com>.
+
 2010-07-27  Bruno Haible  <bruno@clisp.org>
 
 	* fr.po: Update from Christophe Combelles <ccomb@free.fr>.
