--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-08-23  Bruno Haible  <bruno@clisp.org>
+
+	* fi.po: Update from Jorma Karvonen <karvonen.jorma@gmail.com>.
+	* it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
+
 2010-07-27  Bruno Haible  <bruno@clisp.org>
 
 	* fr.po: Update from Christophe Combelles <ccomb@free.fr>.
