--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-29  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (Using Compendia): Correct after 2007-09-09 change.
+
 2010-06-06  Bruno Haible  <bruno@clisp.org>
 
 	xgettext: Recognize language of files ending in .perl.
