--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-29  Bruno Haible  <bruno@clisp.org>
+
+	* modules/regex.diff: Update after gnulib changed.
+
 2010-06-04  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.18.1 released.
