--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2010-08-31  Bruno Haible  <bruno@clisp.org>
+
+	Avoid test leftovers on MacOS X 10.5.
+	* lang-objc: Add hello.dSYM to tmpfiles.
+
 2010-06-06  Bruno Haible  <bruno@clisp.org>
 
 	Test the libgettextpo library and its functions.
