po-mode: make (po-check-file-header) optional (bug #30835)
po-mode would always overwrite the PO Header Entry when editing *.po
files. This isn't always desired behavior as noted in bug #30835 so
it's now customizable.

It can be customized through the po-auto-update-file-header variable,
which can be t, nil or 'ask. It's t by default to preserve the old
default behavior.

Signed-off-by: Ævar Arnfjörð Bjarmason <avarab@gmail.com>

--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,8 @@
+2013-03-05  Ævar Arnfjörð Bjarmason  <avarab@gmail.com>  (tiny change)
+
+	* po-mode.el (po-auto-update-file-header): New user option.
+	(po-check-file-header): Respect 'po-auto-update-file-header'.
+
 2013-03-04  Daiki Ueno  <ueno@gnu.org>
 
 	* autopoint.in: Handle macro directories specified in configure.ac.
