--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-10  Bruno Haible  <bruno@clisp.org>
+
+	* bg.po: Update from Roumen Petrov <transl@roumenpetrov.info>.
+
 2010-08-15  Bruno Haible  <bruno@clisp.org>
 
 	* fi.po: Update from Jorma Karvonen <karvonen.jorma@gmail.com>.
