--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,9 @@
+2010-11-07  Bruno Haible  <bruno@clisp.org>
+
+	Rename autosprintf.h.in to autosprintf.in.h.
+	* autosprintf.in.h: New file, renamed from autosprintf.h.in.
+	* Makefile.am (autosprintf.h, EXTRA_DIST): Update.
+
 2010-10-14  Bruno Haible  <bruno@clisp.org>
 
 	vasnprintf: Don't set errno to 0.
