--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2010-11-07  Bruno Haible  <bruno@clisp.org>
+
+	format-c.c: Prepare for sharing code with libintlext.
+	* format-c.c (INVALID_ANGLE_BRACKET, INVALID_IGNORED_ARGUMENT): New
+	macros.
+	(format_parse): Use them.
+
 2011-06-07  Bruno Haible  <bruno@clisp.org>
 
 	Rely more on libtool.
