--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,7 @@
+2011-06-02  Bruno Haible  <bruno@clisp.org>
+
+	* POTFILES.in: Add src/format-c-parse.h.
+
 2010-10-10  Bruno Haible  <bruno@clisp.org>
 
 	* bg.po: Update from Roumen Petrov <transl@roumenpetrov.info>.
