--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2010-11-13  Ihar Hrachyshka  <ihar.hrachyshka@gmail.com>  (tiny change)
+
+	* plural-table.c (plural_table): Added Belarusian, copied from Russian
+	and Ukrainian.
+
 2010-11-07  Bruno Haible  <bruno@clisp.org>
 
 	format-c.c: Share code with libintlext.
