--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2010-11-20  Bruno Haible  <bruno@clisp.org>
+
+	Fix a comment.
+	* vasnprintf.c (VASNPRINTF): Fix comment.
+
 2010-11-07  Bruno Haible  <bruno@clisp.org>
 
 	* loadmsgcat.c (get_sysdep_segment_value): Update comment.
