--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,5 +1,14 @@
 2010-11-20  Bruno Haible  <bruno@clisp.org>
 
+	Port to uClibc.
+	* printf-parse.h (FLAG_LOCALIZED): Treat uClibc like a non-glibc platform.
+	* printf-parse.c (PRINTF_PARSE): Likewise.
+	* vasnprintf.c (decimal_point_char): Treat uClibc like glibc.
+	(VASNPRINTF): Treat uClibc like a non-glibc platform.
+	Reported by Mike Frysinger <vapier@gentoo.org>.
+
+2010-11-20  Bruno Haible  <bruno@clisp.org>
+
 	Fix a comment.
 	* vasnprintf.c (VASNPRINTF): Fix comment.
 
