--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,10 @@
+2010-11-20  Bruno Haible  <bruno@clisp.org>
+
+	Port to uClibc.
+	* glibc21.m4 (gl_GLIBC21): Treat uClibc like glibc.
+	* glibc2.m4 (gt_GLIBC2): Treat uClibc like a non-glibc platform.
+	Reported by Mike Frysinger <vapier@gentoo.org>.
+
 2010-10-04  Bruno Haible  <bruno@clisp.org>
 
 	Make option --with-libpth-prefix work.
