--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,11 @@
 2010-11-20  Bruno Haible  <bruno@clisp.org>
 
+	Ensure that <features.h> is included before __GLIBC__ is tested.
+	* printf-parse.h: Include <features.h>.
+	Reported by Mike Frysinger <vapier@gentoo.org>.
+
+2010-11-20  Bruno Haible  <bruno@clisp.org>
+
 	Port to uClibc.
 	* localename.c (gl_locale_name_thread_unsafe, HAVE_LOCALE_NULL): Treat
 	uClibc like a non-glibc platform.
