--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,5 +1,12 @@
 2010-11-20  Bruno Haible  <bruno@clisp.org>
 
+	Ensure that <features.h> is included before __GLIBC__ is tested.
+	* printf-parse.h: Include <features.h>.
+	* configure.ac: Test for <features.h>.
+	Reported by Mike Frysinger <vapier@gentoo.org>.
+
+2010-11-20  Bruno Haible  <bruno@clisp.org>
+
 	Port to uClibc.
 	* printf-parse.h (FLAG_LOCALIZED): Treat uClibc like a non-glibc platform.
 	* printf-parse.c (PRINTF_PARSE): Likewise.
