--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,5 +1,11 @@
 2010-11-20  Bruno Haible  <bruno@clisp.org>
 
+	Ensure that <features.h> is included before __GLIBC__ is tested.
+	* intl.m4 (AM_INTL_SUBDIR): Test for <features.h>.
+	Reported by Mike Frysinger <vapier@gentoo.org>.
+
+2010-11-20  Bruno Haible  <bruno@clisp.org>
+
 	Port to uClibc.
 	* glibc21.m4 (gl_GLIBC21): Treat uClibc like glibc.
 	* glibc2.m4 (gt_GLIBC2): Treat uClibc like a non-glibc platform.
