--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,11 @@
 2010-11-20  Bruno Haible  <bruno@clisp.org>
 
+	Port to uClibc.
+	* dcigettext.c (_nl_find_msg): Treat uClibc like a non-glibc platform.
+	* loadmsgcat.c (get_sysdep_segment_value): Likewise.
+
+2010-11-20  Bruno Haible  <bruno@clisp.org>
+
 	Ensure that <features.h> is included before __GLIBC__ is tested.
 	* printf-parse.h: Include <features.h>.
 	Reported by Mike Frysinger <vapier@gentoo.org>.
