--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,6 +1,14 @@
 2010-11-20  Bruno Haible  <bruno@clisp.org>
 
 	Port to uClibc.
+	* lib/basename.h: Treat uClibc like glibc.
+	* lib/basename.c: Likewise.
+	* lib/iconv-ostream.oo.c (iconv_ostream::write_mem,
+	iconv_ostream::free, iconv_ostream_create): Likewise.
+
+2010-11-20  Bruno Haible  <bruno@clisp.org>
+
+	Port to uClibc.
 	* lib/gettext.h: Treat uClibc like a non-glibc platform.
 	Reported by Mike Frysinger <vapier@gentoo.org>.
 
