--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,8 @@
+2010-11-26  Bruno Haible  <bruno@clisp.org>
+
+	* iconv.m4 (AM_ICONV): If the gnulib module 'iconv-h' is present, set
+	ICONV_CONST.
+
 2010-11-20  Bruno Haible  <bruno@clisp.org>
 
 	Ensure that <features.h> is included before __GLIBC__ is tested.
