--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,14 @@
+2011-06-02  Bruno Haible  <bruno@clisp.org>
+
+	Update after gnulib changed.
+	* msgexec.c: Include spawn-pipe.h instead of pipe.h.
+	* msginit.c: Likewise.
+	* read-csharp.c: Likewise.
+	* read-java.c: Likewise.
+	* read-resources.c: Likewise.
+	* read-tcl.c: Likewise.
+	* write-resources.c: Likewise.
+
 2010-11-20  Bruno Haible  <bruno@clisp.org>
 
 	Port to uClibc.
