--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-18  Bruno Haible  <bruno@clisp.org>
+
+	* da.po: Update from Keld Simonsen <keld@keldix.com>.
+	* sl.po: Update from Primoz Peterlin <primozz.peterlin@gmail.com>.
+
 2011-06-02  Bruno Haible  <bruno@clisp.org>
 
 	Update after gnulib changed.
