--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-28  Bruno Haible  <bruno@clisp.org>
+
+	Add a comment.
+	* m4/woe32-dll.m4: Add a reference to the woe32dll writeup.
+
 2010-12-10  Bruno Haible  <bruno@clisp.org>
 
 	Update after gnulib changed.
