--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2011-02-12  Bruno Haible  <bruno@clisp.org>
+
+	Update after gnulib changed.
+	* modules/fnmatch.diff: Update.
+
 2010-03-25  Bruno Haible  <bruno@clisp.org>
 
 	Minor formatting changes.
