--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,11 @@
 2011-02-12  Bruno Haible  <bruno@clisp.org>
 
+	Workaround native Windows bug.
+	* setlocale.c (rpl_setlocale): On native Windows, when setlocale
+	succeeds but sets LC_CTYPE to "C", report a failure.
+
+2011-02-12  Bruno Haible  <bruno@clisp.org>
+
 	Avoid clashing overrides for setlocale.
 	* libgnuintl.in.h (setlocale): Don't override if the gnulib override is
 	already enabled.
