--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-25  Bruno Haible  <bruno@clisp.org>
+
+	Minor formatting changes.
+	* lib/gettext.h: Insert space before function argument list.
+
 2010-11-20  Bruno Haible  <bruno@clisp.org>
 
 	Port to uClibc.
