--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,9 @@
+2011-04-13  Bruno Haible  <bruno@clisp.org>
+
+	* msgcat.c (usage): Fix description of --use-first.
+	* msgcomm.c (usage): Fix typo.
+	Reported by Matthijs Kooijman.
+
 2011-06-04  Bruno Haible  <bruno@clisp.org>
 
 	Update after __attibute__ is no longer defined by gnulib.
