Avoid reference to unset shell variable.

--- a/gettext-runtime/src/ChangeLog
+++ b/gettext-runtime/src/ChangeLog
@@ -1,3 +1,8 @@
+2011-05-12  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.sh.in: Avoid reference to unset shell variable ZSH_VERSION.
+	Reported by Thorsten Kampe <thorsten@thorstenkampe.de>.
+
 2010-06-04  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.18.1 released.
