--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2011-04-08  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* relocatable.c (_GL_USE_STDLIB_ALLOC): Define.
+	(malloc): Don't #undef; no longer needed.
+
 2011-02-28  Bruno Haible  <bruno@clisp.org>
 
 	Assume ANSI C behaviour of free().
