--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2011-06-03  Bruno Haible  <bruno@clisp.org>
+
+	Fix link error on Cygwin 1.5.x.
+	* woe32dll/gettextsrc-exports.c: Add color_test_mode.
+
 2011-01-28  Bruno Haible  <bruno@clisp.org>
 
 	Add a comment.
