--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,5 +1,10 @@
 2011-06-03  Bruno Haible  <bruno@clisp.org>
 
+	libxml: Detect installed libxml2 versions which don't define xmlFree().
+	* m4/libxml.m4 (gl_LIBXML): Also try linking an xmlFree() invocation.
+
+2011-06-03  Bruno Haible  <bruno@clisp.org>
+
 	Copyright: Use LGPL 2.1 instead of LGPL 2.0.
 	* lib/gettext.h: Update copyright header.
 	* lib/hash.h: Likewise.
