--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2011-06-04  Bruno Haible  <bruno@clisp.org>
+
+	Avoid link error when linking statically on AIX 7.
+	* Makefile.am (xgettext_LDADD): Add LTLIBICONV.
+
 2011-04-13  Bruno Haible  <bruno@clisp.org>
 
 	* msgcat.c (usage): Fix description of --use-first.
