--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,8 @@
+2011-06-04  Bruno Haible  <bruno@clisp.org>
+
+	Ensure intmax_t gets defined in libasprintf.
+	* Makefile.am (EXTRA_DIST): Add intmax_t.m4.
+
 2011-02-18  Eric Blake  <eblake@redhat.com>
 
 	longlong: skip, rather than fail, on cross-compilation
