--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-06-05  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_LIBGREP): Add mbrlen.
+
 2011-06-04  Bruno Haible  <bruno@clisp.org>
 
 	Ensure intmax_t gets defined in libasprintf.
