--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,5 +1,10 @@
 2011-06-03  Bruno Haible  <bruno@clisp.org>
 
+	Update after gl_PROG_ANSI_CXX changed in gnulib.
+	* configure.ac: Test whether CXX is "no", not ":".
+
+2011-06-03  Bruno Haible  <bruno@clisp.org>
+
 	Fix link error on Cygwin 1.5.x.
 	* woe32dll/gettextsrc-exports.c: Add color_test_mode.
 
